--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,17 @@ html, body {
   margin: 0px;
   padding: 0px;
   font-family: "游ゴシック";
-  width: 80%;
+  width: 100%;
+}
+
+.wrap-index {
+  overflow: hidden;
+  height: 990px;
+}
+
+.wrap-career {
+  overflow: hidden;
+  height: 1990px;
 }
 
 .header-title {
@@ -61,8 +71,13 @@ html, body {
 .introduction-text h1 {
   float: right;
   position: relative;
-  left: 550px;
+  left: 150px;
   top: -200px;
+}
+
+.introduction-text a {
+  text-decoration: none;
+  color: white;
 }
 
 header {
@@ -94,43 +109,57 @@ header {
 }
 
 .introduction-text h1 {
-  left: 550px;
+  left: -34px;
   position: relative;
   white-space: nowrap;
+  font-size: 24px;
 }
 
 .circle {
   display: inline-block;
   width: 120px;
   left: 600px;
-  top: -200px;
+  top: -100px;
   margin-right: 20px;
   position: relative;
   height: 120px;
   border-radius: 50%;
-  background: skyblue;
+  background: red;
   text-align: center;
   line-height: 120px;
 }
 
 .introduction-text-comment {
   left: 560px;
-  top: -170px;
+  top: -80px;
   font-size: 24px;
   position: relative;
 }
 
 .footer_section {
-  top: 200px;
   height: 200px;
-  width: 200%;
+  width: 120%;
+  top: 100px;
   background-color: red;
   position: relative;
 }
 
+.footer_section-career {
+  top: -100px;
+  height: 200px;
+  width: 100%;
+  background-color: red;
+  position: relative;
+}
+
+.footer-part {
+  position: relative;
+  left: 10px;
+}
+
 .footer-menu {
   float: left;
-  font-size: 28px;
+  font-size: 24px;
   top: 50px;
   left: 100px;
   margin-right: 100px;
@@ -159,7 +188,7 @@ header {
 
 .work-content-introduction {
   border-bottom: solid 1px;
-  height: 200px;
+  height: 230px;
   border-top: solid 1px;
   width: 700px;
   margin-left: 225px;
@@ -174,7 +203,8 @@ header {
   position: relative;
   height: 140px;
   border-radius: 50%;
-  background: skyblue;
+  background: red;
+  color: white;
   text-align: center;
   line-height: 140px;
 }
@@ -264,4 +294,140 @@ header {
   top: -120px;
   position: relative;
   font-size: 20px;
+}
+
+.school-background-introduction {
+  height: 400px;
+  border-top: solid 1px;
+  width: 700px;
+  margin-left: 225px;
+}
+
+.skill-sidebar {
+  position: relative;
+  left: 1000px;
+  top: -1200px;
+}
+
+.skill-sidebar ul {
+  list-style: none;
+}
+
+.sidebar-skill {
+  padding-top: 20px;
+}
+
+.sidebar-skill ul {
+  border-top: solid 1px;
+  padding-bottom: 10px;
+  width: 130px;
+}
+
+.sidebar-skill li {
+  left: -35px;
+  top: 10px;
+  position: relative;
+}
+
+/*performance.html*/
+.performance-section h1 {
+  left: 240px;
+  position: relative;
+  font-size: 42px;
+}
+
+.performance-content-introduction {
+  border-bottom: solid 1px;
+  height: 230px;
+  border-top: solid 1px;
+  width: 700px;
+  margin-left: 225px;
+}
+
+.performance-career {
+  display: inline-block;
+  width: 250px;
+  left: 400px;
+  height: 200px;
+  top: -180px;
+  margin-right: 20px;
+  position: relative;
+  height: 100px;
+  background: red;
+  color: white;
+  text-align: center;
+  line-height: 100px;
+}
+
+.performance-career-comment {
+  left: 300px;
+  border-top: 1px solid;
+  position: relative;
+  font-size: 20px;
+  padding-top: 20px;
+  width: 400px;
+  top: -100px;
+}
+
+.left-performance p1 {
+  left: -16px;
+  position: relative;
+  top: -100px;
+}
+
+.left-performance img {
+  width: 180px;
+  top: 20px;
+  position: relative;
+}
+
+/*contact.html*/
+.contact-section h1 {
+  left: 240px;
+  position: relative;
+  font-size: 42px;
+}
+
+.contact-section-right p1 {
+  left: 600px;
+  top: -80px;
+  position: relative;
+}
+
+.Form {
+  position: relative;
+  left: 600px;
+}
+
+.Form-Btn {
+  position: relative;
+  left: 235px;
+}
+
+.Form-Item {
+  margin-top: 10px;
+}
+
+.Form-Item input {
+  width: 300px;
+  background-color: red;
+  height: 40px;
+}
+
+.Form-Item textarea {
+  width: 300px;
+  background-color: red;
+  height: 120px;
+}
+
+.Form-Item .Form-Item-Input {
+  color: white;
+}
+
+.Form-Item .footer_section-contact {
+  top: -100px;
+  height: 200px;
+  width: 100%;
+  background-color: red;
+  position: relative;
 }
